{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 495,
  "lineage": "7e847844-bfa4-c372-5147-f38d1938d4eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_to_nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef35ddd3893dabed",
            "arn": "arn:aws:ec2:eu-west-3:381491959817:elastic-ip/eipalloc-0ef35ddd3893dabed",
            "association_id": "eipassoc-0a0e5d91d0dd7b650",
            "domain": "vpc",
            "id": "eipalloc-0ef35ddd3893dabed",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-09fa2a1d3b8af27f2",
            "private_dns": "ip-172-16-33-24.eu-west-3.compute.internal",
            "private_ip": "172.16.33.24",
            "public_dns": "ec2-15-237-154-202.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.154.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_to_nat1"
            },
            "tags_all": {
              "Name": "eip_to_nat1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_to_nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e7d3bbcc9e2a272",
            "arn": "arn:aws:ec2:eu-west-3:381491959817:elastic-ip/eipalloc-05e7d3bbcc9e2a272",
            "association_id": "eipassoc-077fb4c46e9ee08d9",
            "domain": "vpc",
            "id": "eipalloc-05e7d3bbcc9e2a272",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0d4e325e13449291c",
            "private_dns": "ip-172-16-33-39.eu-west-3.compute.internal",
            "private_ip": "172.16.33.39",
            "public_dns": "ec2-13-39-175-228.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.175.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_to_nat2"
            },
            "tags_all": {
              "Name": "eip_to_nat2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "automation_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045a8ab02aadf4f88",
            "arn": "arn:aws:ec2:eu-west-3:381491959817:instance/i-0430fb8ba72d774ac",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0430fb8ba72d774ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "soo_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abc2a0e2be809d98",
            "private_dns": "ip-172-16-33-26.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.33.26",
            "public_ip": "35.181.166.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-015e76dd058839ce9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7e364d7b2d2a391",
            "tags": {
              "Name": "automation_ec2"
            },
            "tags_all": {
              "Name": "automation_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f31adbce773e5276"
            ]
          },
          "dependencies": [
            "aws_key_pair.soo_ssh_key",
            "aws_security_group.bastion_ssh",
            "aws_subnet.subnet_public1",
            "aws_vpc.soo_vpc",
            "data.aws_ami.instance_image_setup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lamp_web_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb0b94275d5b4aec",
            "arn": "arn:aws:ec2:eu-west-3:381491959817:instance/i-0f8551ac9cc9d68b9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8551ac9cc9d68b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "soo_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0954afb174b2c04c1",
            "private_dns": "ip-172-16-33-125.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.33.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04e749e12e80f7c38",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d721f6da40d82f6",
            "tags": {
              "Name": "lamp_web_ec2"
            },
            "tags_all": {
              "Name": "lamp_web_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a729afe4f9021979"
            ]
          },
          "dependencies": [
            "aws_key_pair.soo_ssh_key",
            "aws_security_group.web_server",
            "aws_subnet.subnet_private_web1",
            "aws_vpc.soo_vpc",
            "data.aws_ami.instance_image_lamp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "soo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:internet-gateway/igw-049e5728d2b3adeed",
            "id": "igw-049e5728d2b3adeed",
            "owner_id": "381491959817",
            "tags": {
              "Name": "soo_igw"
            },
            "tags_all": {
              "Name": "soo_igw"
            },
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "soo-log-bucket",
                "enabled": true,
                "prefix": "soo-alb-state"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:loadbalancer/app/soo-alb/71faa3c1029e43e2",
            "arn_suffix": "app/soo-alb/71faa3c1029e43e2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "soo-alb-1219205217.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:loadbalancer/app/soo-alb/71faa3c1029e43e2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "soo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-020a9e485a76cdd59"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e86014e15e658299"
              },
              {
                "subnet_id": "subnet-0f7e364d7b2d2a391"
              }
            ],
            "subnets": [
              "subnet-0e86014e15e658299",
              "subnet-0f7e364d7b2d2a391"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "soo-alb"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "soo-alb"
            },
            "vpc_id": "vpc-0e4aa766c1711a5c2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_s3_bucket.log_bucket",
            "aws_security_group.load_balancer",
            "aws_subnet.subnet_public1",
            "aws_subnet.subnet_public2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_go_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:listener/app/soo-alb/71faa3c1029e43e2/9244f96719746a44",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:listener/app/soo-alb/71faa3c1029e43e2/9244f96719746a44",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:loadbalancer/app/soo-alb/71faa3c1029e43e2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_s3_bucket.log_bucket",
            "aws_security_group.load_balancer",
            "aws_subnet.subnet_public1",
            "aws_subnet.subnet_public2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_go_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:listener/app/soo-alb/71faa3c1029e43e2/33eed5b9326eb2ca",
            "certificate_arn": "arn:aws:acm:eu-west-3:381491959817:certificate/5e60387a-ae81-4e05-a253-bd8b8e8ef455",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:targetgroup/alb-target-group/2c6809a0ef694a99",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:listener/app/soo-alb/71faa3c1029e43e2/33eed5b9326eb2ca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:loadbalancer/app/soo-alb/71faa3c1029e43e2",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_target_group",
            "aws_s3_bucket.log_bucket",
            "aws_security_group.load_balancer",
            "aws_subnet.subnet_public1",
            "aws_subnet.subnet_public2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:targetgroup/alb-target-group/2c6809a0ef694a99",
            "arn_suffix": "targetgroup/alb-target-group/2c6809a0ef694a99",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:381491959817:targetgroup/alb-target-group/2c6809a0ef694a99",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:381491959817:loadbalancer/app/soo-alb/71faa3c1029e43e2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "soo_nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef35ddd3893dabed",
            "association_id": "eipassoc-0a0e5d91d0dd7b650",
            "connectivity_type": "public",
            "id": "nat-045d7bd5372a24247",
            "network_interface_id": "eni-09fa2a1d3b8af27f2",
            "private_ip": "172.16.33.24",
            "public_ip": "15.237.154.202",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f7e364d7b2d2a391",
            "tags": {
              "Name": "soo_nat1"
            },
            "tags_all": {
              "Name": "soo_nat1"
            }
          },
          "dependencies": [
            "aws_eip.eip_to_nat1",
            "aws_internet_gateway.soo_igw",
            "aws_subnet.subnet_public1",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "soo_nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e7d3bbcc9e2a272",
            "association_id": "eipassoc-077fb4c46e9ee08d9",
            "connectivity_type": "public",
            "id": "nat-07c612a0541ce5c6c",
            "network_interface_id": "eni-0d4e325e13449291c",
            "private_ip": "172.16.33.39",
            "public_ip": "13.39.175.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e86014e15e658299",
            "tags": {
              "Name": "soo_nat2"
            },
            "tags_all": {
              "Name": "soo_nat2"
            }
          },
          "dependencies": [
            "aws_eip.eip_to_nat2",
            "aws_internet_gateway.soo_igw",
            "aws_subnet.subnet_public2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:route-table/rtb-0fdacfa1b1dfd940d",
            "id": "rtb-0fdacfa1b1dfd940d",
            "owner_id": "381491959817",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-045d7bd5372a24247",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_private1"
            },
            "tags_all": {
              "Name": "rt_private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_to_nat1",
            "aws_internet_gateway.soo_igw",
            "aws_nat_gateway.soo_nat1",
            "aws_subnet.subnet_public1",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:route-table/rtb-07bfbfb3f3d4d599f",
            "id": "rtb-07bfbfb3f3d4d599f",
            "owner_id": "381491959817",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07c612a0541ce5c6c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_private2"
            },
            "tags_all": {
              "Name": "rt_private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_to_nat2",
            "aws_internet_gateway.soo_igw",
            "aws_nat_gateway.soo_nat2",
            "aws_subnet.subnet_public2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:route-table/rtb-05dc6f666780f5af5",
            "id": "rtb-05dc6f666780f5af5",
            "owner_id": "381491959817",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049e5728d2b3adeed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_public"
            },
            "tags_all": {
              "Name": "rt_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.soo_igw",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_in_db1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0157b22bfdac550e5",
            "route_table_id": "rtb-0fdacfa1b1dfd940d",
            "subnet_id": "subnet-0c41537d2111d24a1"
          },
          "dependencies": [
            "aws_eip.eip_to_nat1",
            "aws_internet_gateway.soo_igw",
            "aws_nat_gateway.soo_nat1",
            "aws_route_table.rt_private1",
            "aws_subnet.subnet_private_db1",
            "aws_subnet.subnet_public1",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_in_db2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0465b28524e5f2a3b",
            "route_table_id": "rtb-07bfbfb3f3d4d599f",
            "subnet_id": "subnet-00602c281aa8abbf2"
          },
          "dependencies": [
            "aws_eip.eip_to_nat2",
            "aws_internet_gateway.soo_igw",
            "aws_nat_gateway.soo_nat2",
            "aws_route_table.rt_private2",
            "aws_subnet.subnet_private_db2",
            "aws_subnet.subnet_public2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_in_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e557399659c443a",
            "route_table_id": "rtb-05dc6f666780f5af5",
            "subnet_id": "subnet-0f7e364d7b2d2a391"
          },
          "dependencies": [
            "aws_internet_gateway.soo_igw",
            "aws_route_table.rt_public",
            "aws_subnet.subnet_public1",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_in_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ad457cd3e3995d8",
            "route_table_id": "rtb-05dc6f666780f5af5",
            "subnet_id": "subnet-0e86014e15e658299"
          },
          "dependencies": [
            "aws_internet_gateway.soo_igw",
            "aws_route_table.rt_public",
            "aws_subnet.subnet_public2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_in_web1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3354c3b3c6386e0",
            "route_table_id": "rtb-0fdacfa1b1dfd940d",
            "subnet_id": "subnet-04d721f6da40d82f6"
          },
          "dependencies": [
            "aws_eip.eip_to_nat1",
            "aws_internet_gateway.soo_igw",
            "aws_nat_gateway.soo_nat1",
            "aws_route_table.rt_private1",
            "aws_subnet.subnet_private_web1",
            "aws_subnet.subnet_public1",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_in_web2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f68f0b3065ae377",
            "route_table_id": "rtb-07bfbfb3f3d4d599f",
            "subnet_id": "subnet-054436ce46fbad13f"
          },
          "dependencies": [
            "aws_eip.eip_to_nat2",
            "aws_internet_gateway.soo_igw",
            "aws_nat_gateway.soo_nat2",
            "aws_route_table.rt_private2",
            "aws_subnet.subnet_private_web2",
            "aws_subnet.subnet_public2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group/sg-0f31adbce773e5276",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f31adbce773e5276",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "soo_bastion_sg",
            "name_prefix": "",
            "owner_id": "381491959817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "soo_bastion_sg"
            },
            "tags_all": {
              "Name": "soo_bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group/sg-020a9e485a76cdd59",
            "description": "Allow Load Balancer[HTTP/HTTPS] inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020a9e485a76cdd59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "soo_alb_sg",
            "name_prefix": "",
            "owner_id": "381491959817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "soo_alb_sg"
            },
            "tags_all": {
              "Name": "soo_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group/sg-0113bf82af1e60955",
            "description": "Allow SSH/MySQL inbound traffic to the RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0113bf82af1e60955",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a729afe4f9021979",
                  "sg-0f31adbce773e5276"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "soo_rds_sg",
            "name_prefix": "",
            "owner_id": "381491959817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "soo_rds_sg"
            },
            "tags_all": {
              "Name": "soo_rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group/sg-0a729afe4f9021979",
            "description": "Allow ALB/Bastion inbound traffic to WebServer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a729afe4f9021979",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f31adbce773e5276"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020a9e485a76cdd59"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020a9e485a76cdd59"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "soo_web_server_sg",
            "name_prefix": "",
            "owner_id": "381491959817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "soo_web_server_sg"
            },
            "tags_all": {
              "Name": "soo_web_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:subnet/subnet-0c41537d2111d24a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.16.33.192/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c41537d2111d24a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491959817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_private_db1"
            },
            "tags_all": {
              "Name": "subnet_private_db1"
            },
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:subnet/subnet-00602c281aa8abbf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.16.33.224/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00602c281aa8abbf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491959817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_private_db2"
            },
            "tags_all": {
              "Name": "subnet_private_db2"
            },
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:subnet/subnet-04d721f6da40d82f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.16.33.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d721f6da40d82f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491959817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_private_web1"
            },
            "tags_all": {
              "Name": "subnet_private_web1"
            },
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:subnet/subnet-054436ce46fbad13f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.16.33.144/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054436ce46fbad13f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491959817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_private_web2"
            },
            "tags_all": {
              "Name": "subnet_private_web2"
            },
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:subnet/subnet-0f7e364d7b2d2a391",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.16.33.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7e364d7b2d2a391",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491959817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_public1"
            },
            "tags_all": {
              "Name": "subnet_public1"
            },
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:subnet/subnet-0e86014e15e658299",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.16.33.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e86014e15e658299",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491959817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_public2"
            },
            "tags_all": {
              "Name": "subnet_public2"
            },
            "vpc_id": "vpc-0e4aa766c1711a5c2"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "soo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:vpc/vpc-0e4aa766c1711a5c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.33.0/24",
            "default_network_acl_id": "acl-0148ecac82557cafe",
            "default_route_table_id": "rtb-0d0466e253d63978b",
            "default_security_group_id": "sg-0b529b3345189c214",
            "dhcp_options_id": "dopt-08d28a40b5a71a903",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4aa766c1711a5c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d0466e253d63978b",
            "owner_id": "381491959817",
            "tags": {
              "Name": "soo_vpc"
            },
            "tags_all": {
              "Name": "soo_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-0eb84a40d13ad0732",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0eb84a40d13ad0732",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-020a9e485a76cdd59",
            "security_group_rule_id": "sgr-0eb84a40d13ad0732",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bastion_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-0fa7b0b122066dc2b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fa7b0b122066dc2b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f31adbce773e5276",
            "security_group_rule_id": "sgr-0fa7b0b122066dc2b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_ssh",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-0f52ae1010963881e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f52ae1010963881e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0113bf82af1e60955",
            "security_group_rule_id": "sgr-0f52ae1010963881e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_instance",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "webserver_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-004b8c2b9918a5820",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-004b8c2b9918a5820",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a729afe4f9021979",
            "security_group_rule_id": "sgr-004b8c2b9918a5820",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_server",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-07da7d0740062d160",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07da7d0740062d160",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-020a9e485a76cdd59",
            "security_group_rule_id": "sgr-07da7d0740062d160",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-01d097043b272eab9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-01d097043b272eab9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-020a9e485a76cdd59",
            "security_group_rule_id": "sgr-01d097043b272eab9",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_bastion_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-0b3f75850d70c68dc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0b3f75850d70c68dc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f31adbce773e5276",
            "security_group_id": "sg-0113bf82af1e60955",
            "security_group_rule_id": "sgr-0b3f75850d70c68dc",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_ssh",
            "aws_security_group.rds_instance",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-01214aa48940177b6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01214aa48940177b6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f31adbce773e5276",
            "security_group_rule_id": "sgr-01214aa48940177b6",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_ssh",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-02775ee11692ead46",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02775ee11692ead46",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-020a9e485a76cdd59",
            "security_group_id": "sg-0a729afe4f9021979",
            "security_group_rule_id": "sgr-02775ee11692ead46",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_security_group.web_server",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_web_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-08789bc95535a4709",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-08789bc95535a4709",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-020a9e485a76cdd59",
            "security_group_id": "sg-0a729afe4f9021979",
            "security_group_rule_id": "sgr-08789bc95535a4709",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_security_group.web_server",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_web_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-0d1a03df68a0cc4b6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0d1a03df68a0cc4b6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a729afe4f9021979",
            "security_group_id": "sg-0113bf82af1e60955",
            "security_group_rule_id": "sgr-0d1a03df68a0cc4b6",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_instance",
            "aws_security_group.web_server",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_web_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:381491959817:security-group-rule/sgr-02f72c6ac1edbd064",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02f72c6ac1edbd064",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f31adbce773e5276",
            "security_group_id": "sg-0a729afe4f9021979",
            "security_group_rule_id": "sgr-02f72c6ac1edbd064",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_ssh",
            "aws_security_group.web_server",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    }
  ]
}